Revision history for MooseX-Types

{{$NEXT}}

0.45      2014-09-02 01:17:50Z
        - increase the required versions of some prerequisites

0.44      2014-03-09 04:16:20Z
        - full respect for namespaces: declared types are now properly
          installed into the proper package, so they survive
          namespace::autoclean; however, types imported from the declaration
          class are still properly cleaned by namespace::autoclean (as
          implemented in trial versions 0.40-0.43)

0.43      2014-01-17 01:25:55Z (TRIAL RELEASE)
        - line numbers in shipped code are now almost the same (within 3) as
          the repository source, for easier debugging
        - skipped new namespacing tests that fail with older Moose versions,
          due to an inability to install blessed subs

0.42      2014-01-04 23:31:58Z (TRIAL RELEASE)
        - declared (not imported) types are now properly installed into the
          proper package, so they survive namespace::autoclean (fixed this
          time)

0.41      2013-12-21 17:21:41Z
        - reversed changes in 0.40, until compatibility issues with older
          Moose versions are figured out

0.40      2013-12-20 06:38:15Z
        - types are now properly installed into the proper package, so they
          survive namespace::autoclean

0.39      2013-11-30 18:31:32Z
        - more strict warnings checking in tests
        - re-release to fix compile test

0.38      2013-09-17 00:44:16Z
        - removed use of deprecated enum syntax

0.37      2013-09-08 21:58:26Z
        - removed use of deprecated Class::MOP::load_class
        - repository has moved to the GitHub Moose organization

0.36    2013-06-22 20:51:54Z
        - fixed failing tests on 5.8.5 due to incorrect == overload
        (RT#77100, Graham Knop)

0.35    2012-05-19
        - The new delegation code could fail when a type had no
          parent. Attempting to subtype Any was one way to trigger the
          bug. (Dave Rolsky)
